create the adapters
Signed-off-by: Arnav Gupta <arnav@codingblocks.com>

--- a/app/src/main/res/layout/list_item_todo.xml
+++ b/app/src/main/res/layout/list_item_todo.xml
@@ -8,6 +8,7 @@
     android:layout_height="match_parent">
 
     <CheckBox
+        android:id="@+id/cbTodoTitle"
         android:textSize="20sp"
         android:checked="true"
         android:text="Todo Task Item"
