connect adapters and get data
Signed-off-by: Arnav Gupta <arnav@codingblocks.com>

--- a/app/src/main/res/layout/activity_albums.xml
+++ b/app/src/main/res/layout/activity_albums.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context="com.codingblocks.restapi.activities.AlbumsActivity">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvAlbumsList"
+        tools:listitem="@layout/list_item_album"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </FrameLayout>
