--- a/app/src/main/res/layout/activity_todos.xml
+++ b/app/src/main/res/layout/activity_todos.xml
@@ -8,7 +8,9 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvTodosList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_margin="5dp"
+        android:padding="3dp">
 
     </android.support.v7.widget.RecyclerView>
 </FrameLayout>
