--- a/app/src/main/res/layout/activity_users.xml
+++ b/app/src/main/res/layout/activity_users.xml
@@ -15,6 +15,8 @@
     <android.support.v7.widget.RecyclerView
         android:layout_marginBottom="40dp"
         android:id="@+id/rvUserList"
+        android:layout_margin="5dp"
+        android:padding="3dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
