--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -10,6 +10,8 @@
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_margin="5dp"
+        android:padding="3dp"
         android:id="@+id/rvAlbumList"
         android:layout_alignParentTop="true" />
 </RelativeLayout>
