--- a/app/src/main/res/layout/activity_posts.xml
+++ b/app/src/main/res/layout/activity_posts.xml
@@ -9,7 +9,9 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvPostsList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_margin="5dp"
+        android:padding="3dp">
 
     </android.support.v7.widget.RecyclerView>
 
