--- a/app/src/main/res/layout/list_item_comment.xml
+++ b/app/src/main/res/layout/list_item_comment.xml
@@ -7,7 +7,8 @@
 
     <TextView
         android:text="Some body text goes here \nabout comment"
-        android:textSize="18sp"
+        android:textSize="17sp"
+        android:textColor="@android:color/black"
         android:id="@+id/tvCommentBody"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -18,13 +19,17 @@
         <TextView
             android:textSize="15sp"
             android:text="Users Name"
+            android:layout_marginTop="5dp"
             android:id="@+id/tvCommentName"
+            android:textColor="@android:color/holo_green_dark"
             android:layout_weight="1"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
         <TextView
             android:textSize="15sp"
             android:text="email@domain.com"
+            android:textColor="@android:color/holo_blue_dark"
+            android:layout_marginTop="5dp"
             android:id="@+id/tvCommentEmail"
             android:layout_weight="1"
             android:layout_width="0dp"
